fix(shell): 메뉴-도구 레일 간 호버 터널링 이슈 해결 및 Peeking UX 정밀화
- DrawerElement: .body 컨테이너에 mouseleave 리스너를 배치하여 레일 간 마우스 이동 시 호버 유지 (tunneling 해결)
- ToolRailElement: getBoundingClientRect 와 parent height 기반으로 정밀한 수직 정렬 로직 재구현
- shell.css: 동적 정렬을 방해하던 !important 속성 제거
- ToolList: 호버(Peeking) 도구를 최우선하되 외부 브릿지 발행은 선택된 메뉴로 한정하여 상태 오염 방지
- ToolRailMode: Peeking 시 EXPAND 모드를 강제하여 툴팁 오버레이 중복 노출 차단 및 가독성 향상